# resgraph

./: .gitattributes  .gitignore  .ocamlformat  404.html  CHANGELOG.md  Makefile  README.md  TODO.md  bsconfig.json  dune-project  index.html  markdown-page.html  package-lock.json  package.json  rescript.json  resgraph.opam  sitemap.xml
cli/: Bindings.res  Cli.res  ErrorPrinter.res  InitProject.res  Lsp.res  LspCompleteGraphQL.res  LspProtocol.res  Utils.res
docs/: best-practices.html  custom-scalars.html  design-decisions.html  developer-experience.html  docusaurus.config.js  enums.html  getting-started.html  graphql-yoga.html  input-objects.html  input-unions.html  integrating-with-existing-graphql-schemas.html  interfaces.html  mutation.html  node-interface.html  object-types.html  package-lock.json  package.json  pagination.html  query.html  refactor-cmt-direct.md  relay.html  subscriptions.html  unions.html  valid-graphql-types.html
documentation/: best-practices.md  custom-scalars.md  design-decisions.md  developer-experience.md  docs-todo.md  enums.md  getting-started.md  input-objects.md  interfaces.md  mutation.md  object-types.md  query.md  relay.md  resolvers.md  subscriptions.md  unions.md  valid-graphql-types.md
example/: bsconfig.json  package-lock.json  package.json  rescript.json  resgraph.json  schema.graphql
scripts/: post-build.sh
src/: Cli.ml  Commands.ml  Completion.ml  GenerateSchema.ml  GenerateSchemaDiagnostics.ml  GenerateSchemaSDL.ml  GenerateSchemaTypePrinters.ml  (+7 more)
src/ml/: Analyze.ml  BuildSystem.ml  Cfg.ml  Cli.ml  Cmt.ml  CmtDirect.ml  CmtSummarize.ml  CmtViewer.ml  Commands.ml  Completion.ml  CompletionBackEnd.ml  CompletionDecorators.ml  CompletionExpressions.ml  CompletionFrontEnd.ml  CompletionJsx.ml  CompletionPatterns.ml  Completions.ml  CreateInterface.ml  Diagnostics.ml  DirectReferences.ml  DirectResolve.ml  DumpAst.ml  Files.ml  FindFiles.ml  GenerateSchema.ml  GenerateSchemaDiagnostics.ml  GenerateSchemaDirect.ml  GenerateSchemaSDL.ml  GenerateSchemaTypePrinters.ml  GenerateSchemaTypes.ml  GenerateSchemaUtils.ml  GenerateSchemaValidation.ml  Hint.ml  Hover.ml  Loc.ml  LocalTables.ml  Markdown.ml  ModuleResolution.ml  Packages.ml  Pos.ml  (+16 more)
(+237 files in other folders)
