(executable
 (public_name resgraph)
 (name Cli)
 (modes byte exe)
 (flags
  (-w "+6+26+27+32+33+39"))
 (libraries unix str ext ml jsonlib syntax)
 (modules
  Cli
  GenerateSchema
  GenerateSchemaTypes
  GenerateSchemaUtils
  GenerateSchemaDiagnostics
  GenerateSchemaSDL
  GenerateSchemaValidation
  GenerateSchemaTypePrinters
  ProcessAttributes
  ProcessCmt
  ProcessExtra
  TypeUtils
  Shared
  SharedTypes
  Utils
  Loc
  Pos
  Range
  Uri
  Files
  Packages
  ResolvePath
  ModuleResolution
  BuildSystem
  Cache
  Cfg
  Cmt
  Debug
  Diagnostics
  Log
  PrintType
  Protocol
  References
  FindFiles))
